# picolink

./: .gitignore  LICENSE  NOTICE  README.md
.github/workflows/: desktop.yml  firmware.yml
desktop/: README.md  index.html  package-lock.json  package.json  vite.config.mjs
desktop/electron/: main.cjs  preload.cjs
desktop/src/: App.jsx  app.css  command.js  fingerprint.js  gatt.js  insight.js  main.jsx  security.js  useSerial.js
docs/: FAQ.md  HARDWARE.md  PROTOCOL.md
firmware/: CMakeLists.txt  README.md  control.c  hci_bridge.c  main.c  pico_sdk_import.cmake  ui.c
firmware/prebuilt/: ionity-picolink-pico2_w.uf2  ionity-picolink-pico_w.uf2
firmware/src/: btmon.c  btmon.h  buttons.c  buttons.h  control.c  control.h  font.h  gps.c  gps.h  hci_bridge.c  hci_bridge.h  logbuf.c  logbuf.h  main.c  msc_disk.c  oled.c  oled.h  picolink.h  tusb_config.h  ui.c  ui.h  usb_descriptors.c  wifi_scan.c  wifi_scan.h
scripts/: flash.ps1  flash.sh  install.ps1  install.sh  ota-flash.ps1
scripts/udev/: 99-ionity-picolink.rules
